--- a/CustomCompleteTextBox/CustomCompleteTextBox.csproj
+++ b/CustomCompleteTextBox/CustomCompleteTextBox.csproj
@@ -35,18 +35,19 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="WindowsMessage\AppClickFilterHelper.cs" />
     <Compile Include="CustomCompleteTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="WindowsMessage\MessageFilter.cs" />
+    <Compile Include="WindowsMessage\MouseWheelRedirectorFilterHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ToolStripDropDownExt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="WindowsMessage\WindowsAPI.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
