修改命名空间, 符合工具箱图标规范.

--- a/CustomCompleteTextBox/CustomCompleteTextBox.csproj
+++ b/CustomCompleteTextBox/CustomCompleteTextBox.csproj
@@ -37,11 +37,6 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <Compile Include="WindowsMessage\AppClickFilterHelper.cs" />
     <Compile Include="CustomCompleteTextBox.cs">
       <SubType>Component</SubType>
@@ -55,13 +50,7 @@
     <Compile Include="WindowsMessage\WindowsAPI.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CustomCompleteTextBox.bmp" />
+    <EmbeddedResource Include="Resources\ToolBox.bmp" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
