修改设计时类

--- a/CustomCompleteTextBox/CustomCompleteTextBox.csproj
+++ b/CustomCompleteTextBox/CustomCompleteTextBox.csproj
@@ -33,10 +33,12 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomCompleteTextBoxDesigner.cs" />
     <Compile Include="WindowsMessage\AppClickFilterHelper.cs" />
     <Compile Include="CustomCompleteTextBox.cs">
       <SubType>Component</SubType>
