--- a/CustomCompleteTextBox/CustomCompleteTextBox.nuspec
+++ b/CustomCompleteTextBox/CustomCompleteTextBox.nuspec
@@ -1,19 +1,17 @@
 <?xml version="1.0"?>
-<package xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+<package>
   <metadata>
-    <id>CustomCompleteTextBox</id>
-    <version>1.0.1</version>
-    <title>CustomCompleteTextBox</title>
-    <authors>jgh004</authors>
-    <owners>blog.itnmg.net</owners>
-    <description>适用于 WinForm 的带下拉列表的自定义搜索文本框控件, 支持自定义搜索条件.</description>
-    <language>zh-CN</language>
-    <licenseUrl>http://www.gnu.org/licenses/gpl.txt</licenseUrl>
-    <projectUrl>https://github.com/jgh004/CustomCompleteTextBox</projectUrl>
-    <iconUrl>https://github.com/jgh004/CustomCompleteTextBox/blob/master/CustomCompleteTextBox/Resources/CustomCompleteTextBox.png?raw=true</iconUrl>
-    <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <developmentDependency>false</developmentDependency>
-    <copyright>Copyright © 2015 blog.itnmg.net</copyright>
-		<tags>CustomCompleteTextBox,Auto,Complete,TextBox,Drop,WinForm,Control,ComboBox</tags>
-  </metadata>
+		<id>$id$</id>
+		<version>$version$</version>
+		<title>$title$</title>
+		<authors>$author$</authors>
+		<owners>blog.itnmg.net</owners>
+		<licenseUrl>http://www.gnu.org/licenses/gpl.txt</licenseUrl>
+		<projectUrl>https://github.com/jgh004/CustomCompleteTextBox</projectUrl>
+		<iconUrl>https://github.com/jgh004/CustomCompleteTextBox/blob/master/CustomCompleteTextBox/Resources/CustomCompleteTextBox.png</iconUrl>
+		<requireLicenseAcceptance>false</requireLicenseAcceptance>
+		<description>$description$</description>
+		<copyright>Copyright © 2015 blog.itnmg.net</copyright>
+		<tags>CustomCompleteTextBox Auto Complete TextBox Drop WinForm Control ComboBox</tags>
+	</metadata>
 </package>
